# spotify_api

./: .gitignore  Cargo.toml  README.md
src/: album.rs  artist.rs  authentication.rs  browse.rs  follow.rs  lib.rs  library.rs  object.rs  personalization.rs  player.rs  playlist.rs  search.rs  track.rs  user.rs
src/async/: mod.rs  playlist.rs  track.rs
tests/: album.rs  artist.rs  authentication.rs  browse.rs  follow.rs  library.rs  personalization.rs  player.rs  playlist.rs  search.rs  track.rs  user.rs
