[package]
name = "spotify_api"
version = "0.1.3"
authors = ["T.YAMASHITA <8256tako@googlemail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.13.0"
failure = "0.1.5"
futures = "0.1.27"
rand = "0.6"
isocountry = "0.2.0"
reqwest = { version="0.10.6", features=["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
